<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="searchViewModel"
            type="com.igs279.pokemon.ui.search.SearchViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchFragment">

        <EditText
            android:id="@+id/edit_text_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/edit_text_search_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/button_search"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/button_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edit_text_search"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frame_search_poke"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_search">

            <ImageView
                android:id="@+id/image_view_search_poke"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:imageUrl="@{searchViewModel.imageUrl}"/>

            <ImageView
                android:id="@+id/image_view_fav_poke"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end|bottom"
                android:src="@drawable/starbl"
                android:visibility="invisible"/>

        </FrameLayout>

        <TextView
            android:id="@+id/text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/search_text_id"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_search_poke"
            />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/search_text_name"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_id"
            />

        <TextView
            android:id="@+id/text_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/search_text_height"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_name"
            />

        <TextView
            android:id="@+id/text_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/search_text_weight"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_height"
            />

        <TextView
            android:id="@+id/text_baseExperience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/search_text_baseExperience"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_weight"
            />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/search_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids =
                "text_id,
                text_name,
                text_height,
                text_weight,
                text_baseExperience"
            />

        <TextView
            android:id="@+id/text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            tools:text="id"
            app:layout_constraintStart_toEndOf="@+id/search_barrier"
            app:layout_constraintTop_toBottomOf="@+id/frame_search_poke"

            />

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            tools:text="name"
            app:layout_constraintStart_toEndOf="@+id/search_barrier"
            app:layout_constraintTop_toBottomOf="@+id/text_view_id"

            />

        <TextView
            android:id="@+id/text_view_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            tools:text="height"
            app:layout_constraintStart_toEndOf="@+id/search_barrier"
            app:layout_constraintTop_toBottomOf="@+id/text_view_name"/>

        <TextView
            android:id="@+id/text_view_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            tools:text="weight"
            app:layout_constraintStart_toEndOf="@+id/search_barrier"
            app:layout_constraintTop_toBottomOf="@+id/text_view_height"/>

        <TextView
            android:id="@+id/text_view_baseExperience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            tools:text="baseExperience"
            app:layout_constraintStart_toEndOf="@+id/search_barrier"
            app:layout_constraintTop_toBottomOf="@+id/text_view_weight"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>