<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="randomViewModel"
            type="com.igs279.pokemon.ui.random.RandomViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.random.RandomFragment">

        <Button
            android:id="@+id/button_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/button_random"
            android:onClick="@{(view) -> randomViewModel.onClickRandomButton()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frame_random_poke"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_random">

            <ImageView
                android:id="@+id/image_view_random_poke"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:imageUrl="@{randomViewModel.imageUrl}"/>

            <ImageView
                android:id="@+id/image_view_random_fav_poke"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end|bottom"
                android:onClick="@{(view) -> randomViewModel.onClickFavStars()}"
                android:src="@{randomViewModel.favSelect ? @drawable/star : @drawable/starbl}"
                android:visibility="@{randomViewModel.favVisible ? View.VISIBLE : View.INVISIBLE}"
                />

        </FrameLayout>

        <TextView
            android:id="@+id/random_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/search_text_id"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_random_poke"
            />

        <TextView
            android:id="@+id/random_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/search_text_name"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/random_text_id"
            />

        <TextView
            android:id="@+id/random_text_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/search_text_height"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/random_text_name"
            />

        <TextView
            android:id="@+id/random_text_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/search_text_weight"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/random_text_height"
            />

        <TextView
            android:id="@+id/random_text_baseExperience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/search_text_baseExperience"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/random_text_weight"
            />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/random_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids ="
            random_text_id,
            random_text_name,
            random_text_height,
            random_text_weight,
            random_text_baseExperience"
            />

        <TextView
            android:id="@+id/random_text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            tools:text="id"
            app:layout_constraintStart_toEndOf="@+id/random_barrier"
            app:layout_constraintTop_toBottomOf="@+id/frame_random_poke"

            />

        <TextView
            android:id="@+id/random_text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            tools:text="name"
            app:layout_constraintStart_toEndOf="@+id/random_barrier"
            app:layout_constraintTop_toBottomOf="@+id/random_text_view_id"

            />

        <TextView
            android:id="@+id/random_text_view_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            tools:text="height"
            app:layout_constraintStart_toEndOf="@+id/random_barrier"
            app:layout_constraintTop_toBottomOf="@+id/random_text_view_name"/>

        <TextView
            android:id="@+id/random_text_view_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            tools:text="weight"
            app:layout_constraintStart_toEndOf="@+id/random_barrier"
            app:layout_constraintTop_toBottomOf="@+id/random_text_view_height"/>

        <TextView
            android:id="@+id/random_text_view_baseExperience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            tools:text="baseExperience"
            app:layout_constraintStart_toEndOf="@+id/random_barrier"
            app:layout_constraintTop_toBottomOf="@+id/random_text_view_weight"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>